[gd_scene load_steps=21 format=2]

[ext_resource path="res://backgrounds/mainMap.png" type="Texture" id=1]
[ext_resource path="res://sceens/world/world.gd" type="Script" id=2]
[ext_resource path="res://sceens/world/worldAssets/mainFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://audio/PerituneMaterial_EpicBattle_Deity.mp3" type="AudioStream" id=4]
[ext_resource path="res://sceens/world/worldComponents/pauseButton/topLeftPauseButton.tres" type="DynamicFont" id=5]
[ext_resource path="res://sceens/world/worldAssets/pauseButton/pause.tres" type="Texture" id=6]
[ext_resource path="res://sceens/world/worldAssets/musicButtonIcons/speaker.tres" type="Texture" id=7]
[ext_resource path="res://sceens/world/musicButton.gd" type="Script" id=8]
[ext_resource path="res://sceens/world/coinSpawner.gd" type="Script" id=9]
[ext_resource path="res://sceens/world/worldComponents/level.tres" type="DynamicFont" id=10]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[node name="world" type="Node2D"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -483.0
margin_top = -309.0
margin_right = 477.0
margin_bottom = 331.0
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -1, 1 )
current = true

[node name="score" type="Label" parent="."]
margin_left = -496.0
margin_top = -282.0
margin_right = -360.0
margin_bottom = -195.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 3 )
text = "Level: 1
Score: 0
"

[node name="level" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -141.0
margin_right = 138.0
margin_bottom = -65.0
grow_horizontal = 2
rect_pivot_offset = Vector2( 138, 35 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = ExtResource( 10 )
text = "LEVEL: 0"
align = 1

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -27.0
pitch_scale = 0.8
autoplay = true
attenuation = 5.27803

[node name="pauseButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 240.0
margin_top = -455.0
margin_right = 605.0
margin_bottom = -90.0
grow_horizontal = 2
rect_scale = Vector2( 0.085, 0.085 )
rect_pivot_offset = Vector2( 203.333, 180 )
focus_mode = 0
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
toggle_mode = true
button_mask = 7
enabled_focus_mode = 0
icon = ExtResource( 6 )

[node name="musicButton" type="Button" parent="."]
margin_left = 173.0
margin_top = -534.0
margin_right = 785.0
margin_bottom = 77.9999
rect_scale = Vector2( 0.06, 0.06 )
rect_pivot_offset = Vector2( 310.333, 259 )
focus_mode = 0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
toggle_mode = true
button_mask = 7
icon = ExtResource( 7 )
script = ExtResource( 8 )

[node name="spawnEnemies" type="Timer" parent="."]
one_shot = true

[node name="coinSpawner" type="Node2D" parent="."]
script = ExtResource( 9 )

[connection signal="toggled" from="pauseButton" to="." method="_on_pauseButton_toggled"]
[connection signal="toggled" from="musicButton" to="." method="_on_musicButton_toggled"]
[connection signal="timeout" from="spawnEnemies" to="." method="_on_spawnEnemies_timeout"]
